Modify multiple tracker server case,dataserver report bugs

--- a/autom4te.cache/traces.3
+++ b/autom4te.cache/traces.3
@@ -152,6 +152,7 @@ m4trace:configure.ac:8: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:8: -1- AC_PREREQ([2.65])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.ac:8: -1- AM_AUTOMAKE_VERSION([1.14.1])
+m4trace:configure.ac:8: -1- AC_PROG_INSTALL
 m4trace:configure.ac:8: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:8: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -216,9 +217,11 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^MKDIR_P$])
 m4trace:configure.ac:8: -1- AC_SUBST([mkdir_p], ['$(MKDIR_P)'])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^mkdir_p$])
+m4trace:configure.ac:8: -1- AC_PROG_AWK
 m4trace:configure.ac:8: -1- AC_SUBST([AWK])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AWK])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^AWK$])
+m4trace:configure.ac:8: -1- AC_PROG_MAKE_SET
 m4trace:configure.ac:8: -1- AC_SUBST([SET_MAKE])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([SET_MAKE])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^SET_MAKE$])
@@ -330,6 +333,7 @@ m4trace:configure.ac:11: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.ac:11: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
 m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
 m4trace:configure.ac:11: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
+m4trace:configure.ac:12: -1- AC_PROG_RANLIB
 m4trace:configure.ac:12: -1- AC_SUBST([RANLIB])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([RANLIB])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^RANLIB$])
@@ -360,6 +364,7 @@ m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_SYSLOG_H], [/* Define to 1 if you h
 @%:@undef HAVE_SYSLOG_H])
 m4trace:configure.ac:23: -1- AH_OUTPUT([HAVE_UNISTD_H], [/* Define to 1 if you have the <unistd.h> header file. */
 @%:@undef HAVE_UNISTD_H])
+m4trace:configure.ac:23: -1- AC_PROG_CPP
 m4trace:configure.ac:23: -1- AC_SUBST([CPP])
 m4trace:configure.ac:23: -1- AC_SUBST_TRACE([CPP])
 m4trace:configure.ac:23: -1- m4_pattern_allow([^CPP$])
