--- a/src/dataserver/.deps/ds_service.Po
+++ b/src/dataserver/.deps/ds_service.Po
@@ -78,7 +78,8 @@ ds_service.o: ds_service.c /usr/include/stdc-predef.h \
  /usr/local/include/event2/tag.h /usr/local/include/event2/tag_compat.h \
  dataserverd.h ../../src/common/hash_table.h ../../src/common/hash.h \
  ../../src/include/lfs_protocol.h ds_queue.h ../../src/common/list.h \
- ds_conn.h ds_file.h ds_binlog.h ds_block.h ds_disk_io.h ds_service.h
+ ds_conn.h ds_file.h ds_binlog.h ds_sync.h ds_block.h ds_disk_io.h \
+ ds_service.h
 
 /usr/include/stdc-predef.h:
 
@@ -311,6 +312,8 @@ ds_conn.h:
 ds_file.h:
 
 ds_binlog.h:
+
+ds_sync.h:
 
 ds_block.h:
 
